--- a/Assist/app/src/main/AndroidManifest.xml
+++ b/Assist/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Assist">
-        <activity android:name=".ViewEventActivity"></activity>
-        <activity android:name=".AddEventActivity" />
+        <activity android:name=".AddEventActivity"></activity>
+        <activity android:name=".ViewEventActivity" />
         <activity android:name=".MainActivity"/>
-            <activity android:name=".EditEventActivity">
+        <activity android:name=".EditEventActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
