--- a/Assist/app/build.gradle
+++ b/Assist/app/build.gradle
@@ -31,13 +31,28 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'org.jetbrains:annotations:15.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Room components
+    implementation "androidx.room:room-runtime:2.3.0"
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
+    androidTestImplementation "androidx.room:room-testing:2.3.0"
+
+    // Lifecycle components
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
+
+    // UI
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    //implementation 'com.github.traex.calendarlistview:library:1.2.3'
+    // Testing
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation ("androidx.test.espresso:espresso-core:3.4.0", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 }
