--- a/Assist/app/src/main/AndroidManifest.xml
+++ b/Assist/app/src/main/AndroidManifest.xml
@@ -9,27 +9,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Assist">
-        <activity android:name=".CalendarMonthActivity"></activity>
-        <activity android:name=".EditEventActivity" />
-        <activity android:name=".CalendarYearActivity" />
-        <activity android:name=".CalendarDayActivity" />
-        <activity android:name=".ViewEventActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".ViewContactListActivity"/>
+        <activity android:name=".CalendarMonthActivity"/>
+        <activity android:name=".CalendarYearActivity"/>
+        <activity android:name=".CalendarDayActivity"/>
         <activity android:name=".AddContactActivity"/>
+        <activity android:name=".AddEventActivity"/>
         <activity android:name=".AddGroupActivity"/>
         <activity android:name=".AddTemplateActivity"/>
+        <activity android:name=".EditContactActivity" />
+        <activity android:name=".EditEventActivity" />
+        <activity android:name=".EditGroupActivity" />
+        <activity android:name=".EditTemplateActivity" />
+        <activity android:name=".ViewContactListActivity"/>
         <activity android:name=".ViewGroupListActivity"/>
         <activity android:name=".ViewTemplateListActivity"/>
         <activity android:name=".ContactActivity"/>
+        <activity android:name=".ViewEventActivity" />
         <activity android:name=".GroupActivity"/>
         <activity android:name=".TemplateActivity"/>
-        <activity android:name=".AddEventActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <meta-data
