--- a/Assist/app/src/main/AndroidManifest.xml
+++ b/Assist/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        android:requestLegacyExternalStorage="true">
         <activity android:name=".QuickTextActivity"></activity>
         <activity android:name=".CalendarMonthActivity" />
         <activity android:name=".CalendarYearActivity" />
